# django_app

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
