[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "vadim",email = "shooherboom@gmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.0)",
    "django-filter (==22.1)",
    "django-debug-toolbar (==4.0.0)",
    "asgiref (>=3.10.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "packaging (>=25.0,<26.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "sqlparse (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
